# motor_temp_alert

./: CMakeLists.txt  README.md  package.xml
scripts/: listener.py
