<?xml version="1.0"?>
<package format="2">
  <name>motor_temp_alert</name>
  <version>0.0.0</version>
  <description>Monitor motor temperatures and play audible warning alerts.</description>
  <maintainer email="leus@todo.todo">leus</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>trans_ros_bridge</depend>
  <exec_depend>python3-pygame</exec_depend>

  <export>
  </export>
</package>
